syntax = "proto3";
package proto;
option go_package = "/internal/proto;proto";

service CommentService {;
    rpc Create(Comment) returns (CreateCommentResponse) {}
    rpc Get(GetCommentRequest) returns (GetCommentResponse) {}
    rpc Delete(DeleteCommentRequest) returns (DeleteCommentResponse) {}
}

message Comment{
  string id = 1;
  string message = 2;
}

message CreateCommentResponse{
  string id = 1;
  string response = 2;
}

message GetCommentRequest{
  string id = 1;
}

message GetCommentResponse{
  Comment comment = 1;
}

message DeleteCommentRequest{
  string id = 1;
}

message DeleteCommentResponse{
  string id = 1;
  string status = 2;
}

